1. Метод .of [#413902]